# android_wifiserver

app/: build.gradle
app/src/androidTest/java/com/testapp/wifiserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_process.cpp
app/src/main/java/com/testapp/wifiserver/: AutoFitTextureView.java  AvcEncoder.java  CameraFragment.java  CameraFragment2.java  MainActivity.java  NsdHelper.java
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/testapp/wifiserver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
